# rcas_update

./: .gitignore  CMakeLists.txt  README.md  REPRODUCIBILITY.md
apps/: app.cpp  benchmark_cache_misses.cpp  benchmark_cache_misses2.cpp  benchmark_deletion.cpp  benchmark_insertion.cpp  benchmark_merge_query.cpp
datasets/: bom.csv  bom2.csv
include/benchmark/: deletion_experiment.hpp  deletion_query_experiment.hpp  insertion_experiment.hpp  insertion_experiment2.hpp  insertion_query_experiment.hpp  insertion_query_experiment2.hpp  interleaving_experiment.hpp  merge_query_experiment.hpp  option_parser.hpp  perf_wrapper.hpp  query_experiment.hpp  rcas_query_experiment.hpp  robustness_experiment.hpp  runtime_experiment.hpp  scalability_experiment.hpp  selectivity_computer.hpp  skew_experiment.hpp  skew_old_experiment.hpp  space_experiment.hpp  structure_experiment.hpp
include/cas/: binary_key.hpp  bulk_load.hpp  cas.hpp  cas_delete.hpp  cas_insert.hpp  cas_seq.hpp  csv_importer.hpp  index.hpp  index_type.hpp  insert_type.hpp  insertion_helper.hpp  interleaved_key.hpp  interleaver.hpp  interleaving.hpp  interleaving_score.hpp  key.hpp  key_decoder.hpp  key_encoder.hpp  key_encoding.hpp  node.hpp  node0.hpp  node16.hpp  node256.hpp  node4.hpp  node48.hpp  node_type.hpp  path_matcher.hpp  prefix_matcher.hpp  query.hpp  query_stats.hpp  search_key.hpp  surrogate.hpp  types.hpp  update_type.hpp  utils.hpp
scripts/: benchmark_deletion.rb  benchmark_deletion_querying.rb  benchmark_insertion.rb  benchmark_insertion_querying.rb  benchmark_merging.rb  benchmark_querying.rb
src/: CMakeLists.txt
src/benchmark/: deletion_experiment.cpp  deletion_query_experiment.cpp  insertion_experiment.cpp  insertion_experiment2.cpp  insertion_query_experiment.cpp  insertion_query_experiment2.cpp  interleaving_experiment.cpp  merge_query_experiment.cpp  query_experiment.cpp  rcas_query_experiment.cpp  robustness_experiment.cpp  runtime_experiment.cpp  scalability_experiment.cpp  selectivity_computer.cpp  skew_experiment.cpp  skew_old_experiment.cpp  space_experiment.cpp  structure_experiment.cpp
src/cas/: binary_key.cpp  bulk_load.cpp  cas.cpp  cas_delete.cpp  cas_insert.cpp  cas_seq.cpp  csv_importer.cpp  index.cpp  insert_type.cpp  insertion_helper.cpp  interleaved_key.cpp  interleaver.cpp  interleaving.cpp  interleaving_score.cpp  key.cpp  key_decoder.cpp  key_encoder.cpp  locator.cpp  node.cpp  node0.cpp  node16.cpp  node256.cpp  node4.cpp  node48.cpp  path_matcher.cpp  query.cpp  query_stats.cpp  update_type.cpp  utils.cpp
tests/: CMakeLists.txt
tests/cas/: insertion_test.cpp  interleaver_test.cpp  key_encoder_test.cpp  node0_test.cpp
tests/include/: comparator.hpp
